--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,17 +10,21 @@ environment:
   sdk: ">=2.17.3 <3.0.0"
 
 dependencies:
-  provider: ^6.0.3
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  provider: ^6.0.3
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
+  build_runner: ^2.3.2
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-
-  flutter_lints: ^2.0.0
+  hive_generator: ^2.0.0
 
 flutter:
   uses-material-design: true
