--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_lints: ^2.0.1
   provider: ^6.0.4
   shared_preferences: ^2.0.15
+  roulette: ^0.1.3
 
 dev_dependencies:
   build_runner: ^2.3.2
