add new font Helvetica Neue

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,3 +36,8 @@ flutter:
       fonts:
         - asset: assets/fonts/Roboto-Light.ttf
           weight: 300
+    - family: Helvetica Neue
+      fonts:
+        - asset: assets/fonts/HelveticaNeueRoman.ttf
+          weight: 300
+
